fixing temp checks and aligning list usage in UI

--- a/openassembly/static/css/style.0.1.css
+++ b/openassembly/static/css/style.0.1.css
@@ -659,14 +659,17 @@ a {
     width: 100%;
     height:250px;
 }
-.temp_check_small {
+.panel_list_img {
     width:50px;
     height:50px;
     position:relative;
     float:left;
+    margin-right:5px;
 }
 .panel_inner li{
     width:100%;
     display:block;
     height:50px;
+    margin-top:5px;
+    margin-bottom:5px;
 }
